# polygon-rs-api

./: Cargo.toml
src/: polygon-rs-api.rs  rest.rs
src/rest/: attributes.rs  error.rs  market.rs  parameters.rs
src/rest/market/: aggregates.rs  bbo.rs  currency_conversion.rs  daily.rs  grouped.rs  last_quote.rs  last_trade.rs  pair_quote.rs  pair_trade.rs  previous.rs  quotes.rs  snapshots.rs  trades.rs
src/rest/market/snapshots/: chain.rs  contract.rs  gainers_losers.rs  indicies.rs  l2.rs  ticker.rs  tickers.rs
src/tools/: regex_patterns.rs
