[package]
name = "polygon_rs_api"
version = "0.4.1"
edition = "2021"
authors = ["stephen-cameron <git@oxt.ca>"]
description = "Unofficial Library for interacting with the polygon.io api"
license = "MIT"
repository = "https://github.com/steve-oxt/polygon-rs-api/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.6"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
strum_macros = "0.26.4"
tokio = { version = "1.33.0", features = ["full"] }

[lib]
name = "polygon_rs_api"
path = "src/polygon-rs-api.rs"
